--- a/soloAlbum/.settings/org.eclipse.core.resources.prefs
+++ b/soloAlbum/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/common/common.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/photo/test.jsp=UTF-8
